agm create markers example

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.mat-button{
+	background: blue;
+	color: #fff !important;
+}
+
+.mat-card-header-text{
+	margin: 0 !important;
+	font-weight: bold;
+}
